--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="container">
+            <h2 class="log">
+                Sosmed Nandar
+            </h2>
+            <div class="search-bar">
+                <i class="uil uil-search"></i>
+                <input type="search" placeholder="search. . . ">
+            </div>
+            <div class="create">
+                <label for="#create-post">Create</label>
+                <div class="profile-picture">
+                    <img src="./images/profile-1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
