--- a/index.html
+++ b/index.html
@@ -12,19 +12,35 @@
     <nav>
         <div class="container">
             <h2 class="log">
-                Sosmed Nandar
+                Sosmed
             </h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
                 <input type="search" placeholder="search. . . ">
             </div>
             <div class="create">
-                <label for="#create-post">Create</label>
-                <div class="profile-picture">
+                <label class="btn btn-primary" for="#create-post">Create</label>
+                <div class="profile-photo">
                     <img src="./images/profile-1.jpg" alt="">
                 </div>
             </div>
         </div>
     </nav>
+
+    <main>
+        <div class="container">
+            <div class="left">
+
+            </div>
+
+            <div class="middle">
+
+            </div>
+
+            <div class="right">
+                
+            </div>
+        </div>
+    </main>
 </body>
 </html>
