--- a/index.html
+++ b/index.html
@@ -29,13 +29,173 @@
 
     <main>
         <div class="container">
+            <!-- ============ LEFT ============ -->
             <div class="left">
+                <a class="profile">
+                    <div class="profile-photo">
+                        <img src="./images/profile-1.jpg" alt="">
+                    </div>
+                    <div class="handle">
+                        <h4>Nandar Sukmana</h4>
+                        <p class="text-muted">
+                            @nsukmana
+                        </p>
+                    </div>
+                </a>
 
+                <div class="sidebar">
+                    <a href="" class="menu-item active">
+                        <span><i class="uil uil-home"></i></span><h3>Home</h3>
+                    </a>
+
+                    <a href="" class="menu-item">
+                        <span><i class="uil uil-compass"></i></span><h3>Explore</h3>
+                    </a>
+
+                    <a href="" class="menu-item" id="notifications">
+                        <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span><h3>Notifications</h3>
+                        <div class="notifications-popup">
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-2.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>CuteBy</b> accepted your friend request
+                                    <small class="text-muted">2 MINUTE AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-3.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Kang Galau</b> accepted your friend request
+                                    <small class="text-muted">1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-4.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Neneng</b> accepted your friend request
+                                    <small class="text-muted">1 DAYS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-5.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Ci Cuty</b> accepted your friend request
+                                    <small class="text-muted">2 DAYS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-6.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>I'm Tamvan</b> accepted your friend request
+                                    <small class="text-muted">2 DAYS AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="./images/profile-7.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Nunung</b> accepted your friend request
+                                    <small class="text-muted">5 DAYS AGO</small>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="" class="menu-item" id="messages-notifications">
+                        <span><i class="uil uil-envelope-alt"><small class="notification-count">6</small></i></span><h3>Messages</h3>
+                    </a>
+
+                    <a href="" class="menu-item">
+                        <span><i class="uil uil-bookmark"></i></span><h3>Bookmarks</h3>
+                    </a>
+
+                    <a href="" class="menu-item">
+                        <span><i class="uil uil-chart-line"></i></span><h3>Analytics</h3>
+                    </a>
+
+                    <a href="" class="menu-item">
+                        <span><i class="uil uil-palette"></i></span><h3>Theme</h3>
+                    </a>
+
+                    <a href="" class="menu-item">
+                        <span><i class="uil uil-setting"></i></span><h3>Settings</h3>
+                    </a>
+                </div>
+
+                <label for="create-post" class="btn btn-primary">Create post</label>
             </div>
+            <!-- ============ END LEFT ============ -->
 
+            <!-- ============ MIDDLE ============ -->
             <div class="middle">
+                <div class="stories">
+                    <!-- === Story === -->
 
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-8.jpg" alt="">
+                        </div>
+                        <p class="name">ToCool</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-9.jpg" alt="">
+                        </div>
+                        <p class="name">GilaRich</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-10.jpg" alt="">
+                        </div>
+                        <p class="name">Slebew</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-11.jpg" alt="">
+                        </div>
+                        <p class="name">Santri</p>
+                    </div>
+                    
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-12.jpg" alt="">
+                        </div>
+                        <p class="name">Ny Muda</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-13.jpg" alt="">
+                        </div>
+                        <p class="name">MacHo</p>
+                    </div>
+                    <!-- === End Story === -->
+
+                    <form class="create-post">
+                        <div class="profile-photo">
+                            <img src="./images/profile-1.jpg" alt="">
+                        </div>
+                        <input type="text" placeholder="What's on your mind, Nandar?" id="create-post">
+                        <input type="submit" value="Post" class="btn btn-primary">
+                    </form>
+
+                </div>
             </div>
+            <!-- ============ END MIDDLE ============ -->
 
             <div class="right">
                 
