--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="./images/profile-8.jpg" alt="">
+                            <img src="./images/profile-1.jpg" alt="">
                         </div>
-                        <p class="name">ToCool</p>
+                        <p class="name">My Story</p>
                     </div>
 
                     <div class="story">
@@ -183,17 +183,15 @@
                         </div>
                         <p class="name">MacHo</p>
                     </div>
-                    <!-- === End Story === -->
-
-                    <form class="create-post">
-                        <div class="profile-photo">
-                            <img src="./images/profile-1.jpg" alt="">
-                        </div>
-                        <input type="text" placeholder="What's on your mind, Nandar?" id="create-post">
-                        <input type="submit" value="Post" class="btn btn-primary">
-                    </form>
-
                 </div>
+                <!-- === End Story === -->
+                <form class="create-post">
+                    <div class="profile-photo">
+                        <img src="./images/profile-1.jpg" alt="">
+                    </div>
+                    <input type="text" placeholder="What's on your mind, Nandar?" id="create-post">
+                    <input type="submit" value="Post" class="btn btn-primary">
+                </form>
             </div>
             <!-- ============ END MIDDLE ============ -->
 
