--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="notification-body">
                                     <b>CuteBy</b> accepted your friend request
-                                    <small class="text-muted">2 MINUTE AGO</small>
+                                    <small class="text-muted">2 MINUTES AGO</small>
                                 </div>
                             </div>
                             <div>
@@ -192,6 +192,334 @@
                     <input type="text" placeholder="What's on your mind, Nandar?" id="create-post">
                     <input type="submit" value="Post" class="btn btn-primary">
                 </form>
+
+                <!-- === Feeds === -->
+                <div class="feeds">
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-14.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>So Lee Hin</h3>
+                                    <small>Jakarta, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-1.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-2.jpg" alt=""></span>
+                            <span><img src="./images/profile-3.jpg" alt=""></span>
+                            <span><img src="./images/profile-4.jpg" alt=""></span>
+                            <p>Liked by <b>CuteBy</b> and <b>2.345 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>So Lee Hin</b> Salam anak senja. <span class="harsh-tag">#anak</span> <span class="harsh-tag">#senja</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 142 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-15.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>Joco</h3>
+                                    <small>Jakarta, 45 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-2.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-3.jpg" alt=""></span>
+                            <span><img src="./images/profile-4.jpg" alt=""></span>
+                            <span><img src="./images/profile-5.jpg" alt=""></span>
+                            <p>Liked by <b>Kang Galau</b> and <b>45 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Joco</b> LatePos. <span class="harsh-tag">#latepos</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 5 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-16.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>Mr. Bambang</h3>
+                                    <small>Jakarta, 1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-16.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-4.jpg" alt=""></span>
+                            <span><img src="./images/profile-5.jpg" alt=""></span>
+                            <span><img src="./images/profile-6.jpg" alt=""></span>
+                            <p>Liked by <b>Neneng</b> and <b>15 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mr. Bambang</b> Kerja kerja kerja <span class="harsh-tag">#work</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 12 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-17.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>Nuuuur</h3>
+                                    <small>Jakarta, 1 HOURS AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-3.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-5.jpg" alt=""></span>
+                            <span><img src="./images/profile-6.jpg" alt=""></span>
+                            <span><img src="./images/profile-7.jpg" alt=""></span>
+                            <p>Liked by <b>Ci Cuty</b> and <b>2.345 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Nuuuur</b> Dingin bat dah. <span class="harsh-tag">#salju</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 1242 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-18.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>Ines</h3>
+                                    <small>Jakarta, 1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-4.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-6.jpg" alt=""></span>
+                            <span><img src="./images/profile-7.jpg" alt=""></span>
+                            <span><img src="./images/profile-8.jpg" alt=""></span>
+                            <p>Liked by <b>I'm Tamvan</b> and <b>2.345 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Ines</b> Just miss u. <span class="harsh-tag">#miss</span> <span class="harsh-tag">#rindu</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 142 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-19.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>Mr Bewok</h3>
+                                    <small>Jakarta, 2 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-5.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-7.jpg" alt=""></span>
+                            <span><img src="./images/profile-8.jpg" alt=""></span>
+                            <span><img src="./images/profile-9.jpg" alt=""></span>
+                            <p>Liked by <b>Nunung</b> and <b>2.345 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>Mr Bewok</b> Penyemangat <span class="harsh-tag">#penyemangat</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 142 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+
+                    <!-- === Feed === -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-20.jpg" alt="">
+                                </div>
+                                <div class="ingo">
+                                    <h3>CiGahoul</h3>
+                                    <small>Jakarta, 2 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-6.jpg" alt="">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="interaction-button">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <span><img src="./images/profile-8.jpg" alt=""></span>
+                            <span><img src="./images/profile-9.jpg" alt=""></span>
+                            <span><img src="./images/profile-10.jpg" alt=""></span>
+                            <p>Liked by <b>CuteBy</b> and <b>2.345 others</b> </p>
+                        </div>
+
+                        <div class="caption">
+                            <p><b>CiGahoul</b> Chill di SCBD (Sudirman Citayem Bojonggede Depok). <span class="harsh-tag">#scbd</span> <span class="harsh-tag">#nongky</span> <span class="harsh-tag">#chill</span></p>
+                        </div>
+
+                        <div class="comments text-muted">
+                            View all 142 comments
+                        </div>
+                    </div>
+                    <!-- === End Feed === -->
+                </div>
+                <!-- === End Feeds === -->
+
             </div>
             <!-- ============ END MIDDLE ============ -->
 
