create right nav

--- a/index.html
+++ b/index.html
@@ -523,9 +523,67 @@
             </div>
             <!-- ============ END MIDDLE ============ -->
 
+            <!-- ============ RIGHT ============ -->
             <div class="right">
+                <!-- Messages -->
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages</h4><i class="uil uil-edit"></i>
+                    </div>
+                    <!-- Search bar -->
+                    <div class="search-bar">
+                        <i class="uil uil-search"></i>
+                        <input type="search" placeholder="Search messages" id="message-search">
+                    </div>
+                    <!-- Message category -->
+                    <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <h6 class="message-requests">Request(7)</h6>
+                    </div>
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-21.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                </div>
+                <!-- End Messages -->
+
                 
+                <!-- Friend Request -->
+                <div class="friend-requests">
+                    <h4>Request</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-22.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>XXX</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                                <div class="action">
+                                    <button class="btn btn-primary">
+                                        Accept
+                                    </button>
+                                    <button class="btn">
+                                        Decline
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Friend Request -->
             </div>
+            <!-- ============ END RIGHT ============ -->
         </div>
     </main>
 </body>
