--- a/index.html
+++ b/index.html
@@ -544,7 +544,67 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-21.jpg" alt="">
+                            <img src="./images/profile-15.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-16.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-1.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-18.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-19.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>XXX</h5>
+                            <p class="text-muted">Blablabla</p>
+                        </div>
+                    </div>
+                    <!-- End Message -->
+                    <!-- Message -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-20.jpg" alt="">
+                            <div class="active"></div>
                         </div>
                         <div class="message-body">
                             <h5>XXX</h5>
