styles friend requests and other

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-15.jpg" alt="">
+                            <img src="./images/profile-23.jpg" alt="">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -556,7 +556,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-16.jpg" alt="">
+                            <img src="./images/profile-24.jpg" alt="">
                         </div>
                         <div class="message-body">
                             <h5>XXX</h5>
@@ -567,7 +567,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-1.jpg" alt="">
+                            <img src="./images/profile-25.jpg" alt="">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -579,7 +579,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-18.jpg" alt="">
+                            <img src="./images/profile-26.jpg" alt="">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -591,7 +591,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-19.jpg" alt="">
+                            <img src="./images/profile-27.jpg" alt="">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -603,7 +603,7 @@
                     <!-- Message -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-20.jpg" alt="">
+                            <img src="./images/profile-28.jpg" alt="">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -619,6 +619,76 @@
                 <!-- Friend Request -->
                 <div class="friend-requests">
                     <h4>Request</h4>
+                    <!-- request -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-31.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>XXX</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <!-- end request -->
+                    <!-- request -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-32.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>XXX</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <!-- end request -->
+                    <!-- request -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-33.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>XXX</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
+                    </div>
+                    <!-- end request -->
+                    <!-- request -->
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
@@ -629,17 +699,18 @@
                                 <p class="text-muted">
                                     8 mutual friends
                                 </p>
-                                <div class="action">
-                                    <button class="btn btn-primary">
-                                        Accept
-                                    </button>
-                                    <button class="btn">
-                                        Decline
-                                    </button>
-                                </div>
                             </div>
                         </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline
+                            </button>
+                        </div>
                     </div>
+                    <!-- end request -->
                 </div>
                 <!-- End Friend Request -->
             </div>
