--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 </div>
                                 <div class="ingo">
                                     <h3>So Lee Hin</h3>
-                                    <small>Jakarta, 15 MINUTES AGO</small>
+                                    <small>Bekasi, 15 MINUTES AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -250,8 +250,8 @@
                                     <img src="./images/profile-15.jpg" alt="">
                                 </div>
                                 <div class="ingo">
-                                    <h3>Joco</h3>
-                                    <small>Jakarta, 45 MINUTES AGO</small>
+                                    <h3>See U din</h3>
+                                    <small>Bogor, 45 MINUTES AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -279,7 +279,7 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Joco</b> LatePos. <span class="harsh-tag">#latepos</span></p>
+                            <p><b>See U din</b> LatePos. <span class="harsh-tag">#latepos</span></p>
                         </div>
 
                         <div class="comments text-muted">
@@ -342,7 +342,7 @@
                                     <img src="./images/profile-17.jpg" alt="">
                                 </div>
                                 <div class="ingo">
-                                    <h3>Nuuuur</h3>
+                                    <h3>Ci We WE</h3>
                                     <small>Jakarta, 1 HOURS AGO</small>
                                 </div>
                             </div>
@@ -371,7 +371,7 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Nuuuur</b> Dingin bat dah. <span class="harsh-tag">#salju</span></p>
+                            <p><b>Ci We WE</b> Dingin bat dah. <span class="harsh-tag">#salju</span></p>
                         </div>
 
                         <div class="comments text-muted">
@@ -435,7 +435,7 @@
                                 </div>
                                 <div class="ingo">
                                     <h3>Mr Bewok</h3>
-                                    <small>Jakarta, 2 HOUR AGO</small>
+                                    <small>Tanggerang, 2 HOUR AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -481,7 +481,7 @@
                                 </div>
                                 <div class="ingo">
                                     <h3>CiGahoul</h3>
-                                    <small>Jakarta, 2 HOUR AGO</small>
+                                    <small>Bojonggede, 2 HOUR AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -548,8 +548,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>So Im Mah</h5>
+                            <p class="text-muted">Beliin gorengan 3 yak!!!!!!!!!</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -559,8 +559,8 @@
                             <img src="./images/profile-24.jpg" alt="">
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>Lin Lung</h5>
+                            <p class="text-muted">Nyontek tugas donk!</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -571,8 +571,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>Ci Bowx</h5>
+                            <p class="text-muted">Pulpen gua lu bawa oy...</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -583,8 +583,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>Ncing lu</h5>
+                            <p class="text-muted">Wkwkwkwkwk</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -595,8 +595,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>Lee See Han</h5>
+                            <p class="text-muted">Pinjem duit bang!</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -607,8 +607,8 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>XXX</h5>
-                            <p class="text-muted">Blablabla</p>
+                            <h5>Obat kurus</h5>
+                            <p class="text-muted">Mau cepat kurus tapi teteap doyan makan??? SAMA!!!!!!!!</p>
                         </div>
                     </div>
                     <!-- End Message -->
@@ -626,9 +626,9 @@
                                 <img src="./images/profile-31.jpg" alt="">
                             </div>
                             <div>
-                                <h5>XXX</h5>
+                                <h5>Neng Traveler</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    1 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -649,7 +649,7 @@
                                 <img src="./images/profile-32.jpg" alt="">
                             </div>
                             <div>
-                                <h5>XXX</h5>
+                                <h5>Ci buan</h5>
                                 <p class="text-muted">
                                     8 mutual friends
                                 </p>
@@ -672,9 +672,9 @@
                                 <img src="./images/profile-33.jpg" alt="">
                             </div>
                             <div>
-                                <h5>XXX</h5>
+                                <h5>Lolohan</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    18 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -695,9 +695,9 @@
                                 <img src="./images/profile-22.jpg" alt="">
                             </div>
                             <div>
-                                <h5>XXX</h5>
+                                <h5>Kang Chi Men</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    20 mutual friends
                                 </p>
                             </div>
                         </div>
